respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/Transport_Packaging_Data__c.object
<CustomObject>
    <fields>
        <fullName>Cargo_Description__c</fullName>
        <label>Cargo Description</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consolidation_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipments Program</label>
        <referenceTo>Shipment_Program__c</referenceTo>
        <relationshipName>Transport_Packaging_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Container_Nbrs__c</fullName>
        <label>Truck/Container Nbrs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Container_Pallets__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pallet / Container Type</label>
        <referenceTo>Pallet_Container_Type__c</referenceTo>
        <relationshipName>Transport_Packaging_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delivery_Details__c</fullName>
        <label>Delivery Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Free_Space_Container__c</fullName>
        <label>% Last Container Free</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Gross_Volume__c</fullName>
        <label>Total Gross Volume (m3)</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Event_Date__c</fullName>
        <label>Last Event Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Event__c</fullName>
        <label>Last Event</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>N_Containers__c</fullName>
        <label>Number of Containers</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Packages__c</fullName>
        <label>Number of Packages</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ocuped_Space_Container__c</fullName>
        <label>% Last Container Load</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pickup_Details__c</fullName>
        <label>Pickup Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Projected_Date_Time__c</fullName>
        <label>Projected Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Real_Date_Time__c</fullName>
        <label>Real Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Scanned_Barcodes__c</fullName>
        <label>Scanned Barcodes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ship_from_Door_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pickup from (Account)</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Supplier, Customer,  Supply Chain Partner</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Transport_Packaging_Data_Ship_from_Door</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_from_Door_Address__c</fullName>
        <label>Pickup from (Address)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ship_from_Door_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pickup from (Contact)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Shipment_Packaging_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_from_Door_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pickup from (Location)</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipName>Shipment_Packaging_Data_Ship_from_Door</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_to_Door_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delivery to (Account)</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Customer, Supply Chain Partner, Supplier</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Transport Pickup/Delivery Orders (Delivery to (Account))</relationshipLabel>
        <relationshipName>Transport_Packaging_Data_Ship_to_Door</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_to_Door_Address__c</fullName>
        <label>Delivery to (Address)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ship_to_Door_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delivery to (Contact)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Transport Pickup/Delivery Orders (Delivery to (Contact))</relationshipLabel>
        <relationshipName>Shipment_Packaging_Data1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_to_Door_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delivery to (Location)</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipName>Shipment_Packaging_Data_Ship_to_Door</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipment_Fee_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipment Fee Line</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Shipment_Fee_Line__c.Shipment__c</field>
                <operation>equals</operation>
                <valueField>Shipment_Fee_Line__c.Shipment__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Shipment_Fee_Line__c</referenceTo>
        <relationshipName>Transport_Packaging_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipment_Status__c</fullName>
        <formula>TEXT(Shipment__r.Shipment_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment__c</fullName>
        <label>Shipment</label>
        <referenceTo>Shipment__c</referenceTo>
        <relationshipName>Shipment_Packaging_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Special_Instructions__c</fullName>
        <label>Special Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Loaded</fullName>
                </value>
                <value>
                    <fullName>Departed</fullName>
                </value>
                <value>
                    <fullName>Arrived</fullName>
                </value>
                <value>
                    <fullName>Unloaded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Number_Pallets__c</fullName>
        <label>Number of Pallets</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Weight_Items_Kg__c</fullName>
        <label>Total Gross Weight (Kg)</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transport_type__c</fullName>
        <label>Transport Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound Transport</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
                <value>
                    <fullName>Outbound Transport</fullName>
                </value>
                <value>
                    <fullName>Land transport to POL</fullName>
                </value>
                <value>
                    <fullName>Land transport to place of delivery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transporter_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transporter Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Transporter__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Transport_Packaging_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transporter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transporter</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Supply Chain Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Shipment_Packaging_Data_Transporter</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>uFollowit_Number__c</fullName>
        <label>uFollowit Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>uFollowit_Status__c</fullName>
        <label>uFollowit Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>Picked-up</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Finished</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Transport Pickup/Delivery Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Container_Nbrs__c</columns>
        <columns>Shipment__c</columns>
        <columns>Shipment_Status__c</columns>
        <columns>Transport_type__c</columns>
        <columns>Consolidation_Program__c</columns>
        <columns>Ship_from_Door_Address__c</columns>
        <columns>Ship_to_Door_Address__c</columns>
        <columns>Real_Date_Time__c</columns>
        <columns>Transporter__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Order Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transport Pickup/Delivery Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>